--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
     "@ionic-native/card-io": "^4.3.1",
-    "@ionic-native/core": "4.3.0",
+    "@ionic-native/core": "^4.3.0",
+    "@ionic-native/firebase": "^4.3.1",
     "@ionic-native/qr-scanner": "^4.3.1",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
