upload all file

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
-  "name": "attendance",
-  "app_id": "",
+  "name": "application",
+  "app_id": "e61e07f0",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
