--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "attendance",
+  "name": "application",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
@@ -20,27 +20,33 @@
     "@angular/http": "4.4.3",
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
-    "@ionic-native/card-io": "^4.3.1",
-    "@ionic-native/core": "^4.3.0",
-    "@ionic-native/firebase": "^4.3.1",
-    "@ionic-native/qr-scanner": "^4.3.1",
+    "@ionic-native/barcode-scanner": "^4.3.2",
+    "@ionic-native/calendar": "^4.3.2",
+    "@ionic-native/core": "4.3.0",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.0.1",
+    "angularfire2": "^5.0.0-rc.3",
+    "cordova-android": "~6.3.0",
+    "cordova-plugin-calendar": "^4.6.0",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.4",
-    "cordova-plugin-firebase": "^0.1.24",
     "cordova-plugin-ionic-webview": "^1.1.15",
-    "cordova-plugin-qrscanner": "^2.5.0",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
     "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-sqlite-storage": "^2.0.4",
+    "firebase": "^4.5.1",
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "ngx-qrcode2": "0.0.5",
+    "phonegap-plugin-barcodescanner": "^6.0.8",
+    "promise-polyfill": "^6.0.2",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "cordova-browser": "~5.0.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
@@ -49,17 +55,19 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-qrscanner": {},
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-calendar": {},
       "ionic-plugin-keyboard": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-firebase": {}
+      "phonegap-plugin-barcodescanner": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
