--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "firebase": "^4.5.1",
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
+    "ionic3-calendar": "^1.1.6",
     "ionicons": "3.0.0",
     "ngx-qrcode2": "0.0.5",
     "phonegap-plugin-barcodescanner": "^6.0.8",
