--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/calendar": "^4.3.2",
     "@ionic-native/core": "4.3.0",
     "@ionic-native/email-composer": "^4.3.2",
+    "@ionic-native/sms": "^4.3.2",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "^2.0.1",
@@ -38,6 +39,7 @@
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
     "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-sms-plugin": "^0.1.11",
     "cordova-sqlite-storage": "^2.0.4",
     "firebase": "^4.5.1",
     "ionic-angular": "3.7.1",
@@ -67,7 +69,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "phonegap-plugin-barcodescanner": {},
-      "cordova-plugin-email-composer": {}
+      "cordova-plugin-email-composer": {},
+      "cordova-sms-plugin": {}
     },
     "platforms": [
       "android",
