--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/barcode-scanner": "^4.3.2",
     "@ionic-native/calendar": "^4.3.2",
     "@ionic-native/core": "4.3.0",
+    "@ionic-native/date-picker": "^4.3.3",
     "@ionic-native/email-composer": "^4.3.2",
     "@ionic-native/sms": "^4.3.2",
     "@ionic-native/splash-screen": "4.3.0",
@@ -33,6 +34,7 @@
     "cordova-browser": "~5.0.0",
     "cordova-plugin-calendar": "^4.6.0",
     "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-datepicker": "^0.9.3",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-email-composer": "^0.8.10",
     "cordova-plugin-ionic-webview": "^1.1.15",
@@ -42,10 +44,9 @@
     "cordova-sms-plugin": "^0.1.11",
     "cordova-sqlite-storage": "^2.0.4",
     "firebase": "^4.5.1",
-    "ionic-angular": "3.7.1",
+    "ionic-angular": "^3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
-    "ionic3-calendar": "^1.1.6",
-    "ionicons": "3.0.0",
+    "ionicons": "^3.0.0",
     "ngx-qrcode2": "0.0.5",
     "phonegap-plugin-barcodescanner": "^6.0.8",
     "promise-polyfill": "^6.0.2",
@@ -54,6 +55,10 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
+    "@angular/common": ">=4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": ">=4.0.0",
+    "@angular/cli": "^1.4.9",
     "@ionic/app-scripts": "3.0.0",
     "typescript": "2.3.4"
   },
@@ -61,7 +66,6 @@
   "cordova": {
     "plugins": {
       "cordova-sqlite-storage": {},
-      "cordova-plugin-calendar": {},
       "ionic-plugin-keyboard": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
@@ -70,7 +74,8 @@
       "cordova-plugin-ionic-webview": {},
       "phonegap-plugin-barcodescanner": {},
       "cordova-plugin-email-composer": {},
-      "cordova-sms-plugin": {}
+      "cordova-sms-plugin": {},
+      "cordova-plugin-calendar": {}
     },
     "platforms": [
       "android",
