--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,9 @@
   "compileOnSave": false,
   "atom": {
     "rewriteTsconfig": false
-  }
+  },
+  "paths": { "@angular/*": ["../node_modules/@angular/*"] }
+
+
+
 }
